--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-# User specified
-.env
-node_modules
-*.csv
-__pycache__
-.DS_Store
-
 # Logs
 logs
 *.log
@@ -14,18 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+node_modules
+dist
+dist-ssr
+*.local
+
 # Editor directories and files
+.vscode/*
+!.vscode/extensions.json
 .idea
-.vscode
+.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
-# Testing
-coverage
-
-# Production
-dist
-build
